# solana-bootcamp-2026

./: README.md  package.json
01-voting/anchor/: Anchor.toml  package.json  tsconfig.json
02-escrow/: README.md
02-escrow/programs/anchor_escrow/: Cargo.toml
02-escrow/tests/: anchor-litesvm-tests.rs
03-voting/: README.md
03-voting/anchor/tests/: voting.spec.ts
04-escrow/: .gitignore  Anchor.toml  Cargo.toml  README.md
04-escrow/programs/anchor_escrow/src/: lib.rs
04-stablecoin/: Anchor.toml
04-stablecoin/idls/: stablecoin.json
04-stablecoin/programs/stablecoin/: Cargo.toml
05-private-transfers/main/: README.md
05-private-transfers/main/anchor/: Anchor.toml  package.json
05-private-transfers/main/frontend/: package.json  vite.config.ts
05-private-transfers/main/instructions/: step-4.1-zk-circuit.md  step-4.2-sunspot-verifier.md  step-4.3-verification-cpi.md  step-4.4-frontend-demo.md
05-private-transfers/starter/: README.md  package.json
05-private-transfers/starter/anchor/: package.json
05-private-transfers/starter/backend/: package.json
05-private-transfers/starter/instructions/: step-4-zk-circuit.md  step-5-onchain-verification.md  step-5-sunspot-verifier.md  step-6-demo.md  step-7-frontend-demo.md
05-private-transfers/step-1-hiding-deposits/backend/: compute-zeros.ts
05-private-transfers/step-1-hiding-deposits/instructions/: step-1-hiding-deposits.md  step-2-proving-membership.md  step-3-preventing-double-spend.md
05-private-transfers/step-2-proving-deposit/anchor/: Anchor.toml
05-private-transfers/step-2-proving-deposit/anchor/programs/mock_verifier/: Cargo.toml
05-private-transfers/step-2-proving-deposit/anchor/programs/mock_verifier/src/: lib.rs
05-private-transfers/step-2-proving-deposit/backend/: init-pool.ts  test-poseidon.ts
05-private-transfers/step-2-proving-deposit/instructions/: step-0-introduction.md
05-private-transfers/step-3-prevent-double-spend/: .gitignore
05-private-transfers/step-3-prevent-double-spend/backend/: package-lock.json
05-private-transfers/step-4-zk/anchor/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
05-private-transfers/step-4-zk/anchor/programs/private_transfers/: Cargo.toml
05-private-transfers/step-4-zk/anchor/programs/private_transfers/src/: lib.rs
05-private-transfers/step-4-zk/anchor/scripts/: init-pool.ts
06-prediction-market/: codama.json
06-prediction-market/anchor/: Cargo.toml
06-prediction-market/app/: globals.css
06-prediction-market/scripts/: 00-overview.md  03-codegen-layer.md  05-security-tradeoffs.md
06-stablecoin/: README.md
06-stablecoin/.claude/: ralph-loop.local.md
07-stableswap/anchor/: Anchor.toml  Cargo.toml  README.md  package.json
07-stableswap/anchor/programs/stableswap/: Cargo.toml
07-stableswap/anchor/programs/stableswap/src/: constants.rs  dynamic_fees.rs  errors.rs  lib.rs  math.rs  oracle.rs  state.rs
07-stableswap/anchor/programs/stableswap/src/instructions/: add_liquidity.rs  check_depeg.rs  initialize_pool.rs  mod.rs  modify_liquidity.rs  remove_liquidity.rs  swap.rs
07-stableswap/anchor/programs/stableswap/tests/: litesvm.rs
07-stableswap/anchor/tests/: stableswap.spec.ts
08-solana-x402-demo/: README.md
10-solana-rwa-labubu/: README.md
11-prediction-market/: README.md  package-lock.json
11-prediction-market/scripts/: 02-on-chain-program.md  06-recap.md
anchor/: Anchor.toml
prediction-market/: LECTURE_PLAN.md
prediction-market/anchor/: Anchor.toml
prediction-market/anchor/programs/prediction_market/: Cargo.toml
prediction-market/app/: page.tsx
prediction-market/scripts/: 01-why-and-what.md  04-frontend-architecture.md  final.md
(+82 files in other folders)
