[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "1.0.0-rc.2"
anchor-litesvm = "0.3"
litesvm = "0.8.2"
solana-sdk = "~3.0"
solana-program = "~3.0"
sha2 = "0.10"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
