[package]
name = "mock_verifier"
version = "0.1.0"
description = "Mock verifier for testing - accepts all proofs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_verifier"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.0.0-rc.2"
